# Uni.lab_1

./: CMakeLists.txt  job.sh
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h
cmake/: ProjectLibraries.cmake  StandardProjectSettings.cmake  VisualStudio.cmake
input/: simple.dot
output/: example.dot
source/: CMakeLists.txt  DiGraph.cpp  DiGraph.h  Matrix.h  Node.cpp  Node.h  authors.h  import.cpp  import.h  main.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  test.cpp  test.h  test_conversions.cpp  test_digraph.cpp  test_matrix.cpp  test_node.cpp
test_compilation/: CMakeLists.txt  test.cpp  test.h  test_digraph.cpp  test_matrix.cpp  test_node.cpp  test_utils.cpp
